# ai-agent-hackathon-2025

./: .dockerignore  .gitignore  CLAUDE.md  README.md  deploy.sh  main.py  pyproject.toml  spec.md
front/: pubspec.yaml
front/android/app/: build.gradle.kts
front/android/app/src/main/: AndroidManifest.xml
front/ios/Runner/: Info.plist
front/lib/: api_client.dart  chat_input_widget.dart  chat_page.dart  main.dart  message_item_widget.dart  services.dart  session_list_widget.dart  split_page.dart
front/lib/models/: slide_page.dart
front/lib/providers/: chat_provider.dart
front/lib/services/: image_picker_service.dart  slide_generator.dart  speech_service.dart
front/lib/widgets/: chat_messages_list.dart  chat_sheet.dart  page_slider.dart  page_view_section.dart
front/macos/Flutter/: GeneratedPluginRegistrant.swift
front/web/: index.html
learning_agent/: __init__.py  agent.py  casual_talk.py  config.py  exam_evaluator.py  exam_listener.py  material_generator.py  teacher.py  topic_hearing.py
memo/: android-dev-setup.md
